--- a/pullzoom/build.gradle
+++ b/pullzoom/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.1"
 
     defaultConfig {
-        applicationId "com.deakee.youfun"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
@@ -21,6 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile project (":pullzoom")
+    compile 'com.android.support:appcompat-v7:21.0.3'
 }
